--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "start": "parcel index.html"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "@types/uuid": "^8.3.1",
     "parcel": "1.12.3",
     "sass": "^1.36.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "uuid": "^8.3.2"
   }
 }
